; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_cli.c_bt_mesh_cfg_ttl_get.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_cli.c_bt_mesh_cfg_ttl_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_msg_ctx = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@OP_DEFAULT_TTL_GET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bt_mesh_cfg_ttl_get(%struct.bt_mesh_msg_ctx* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bt_mesh_msg_ctx*, align 8
  store %struct.bt_mesh_msg_ctx* %0, %struct.bt_mesh_msg_ctx** %3, align 8
  %4 = load %struct.bt_mesh_msg_ctx*, %struct.bt_mesh_msg_ctx** %3, align 8
  %5 = icmp ne %struct.bt_mesh_msg_ctx* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.bt_mesh_msg_ctx*, %struct.bt_mesh_msg_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.bt_mesh_msg_ctx, %struct.bt_mesh_msg_ctx* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %6, %1
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %2, align 4
  br label %18

14:                                               ; preds = %6
  %15 = load %struct.bt_mesh_msg_ctx*, %struct.bt_mesh_msg_ctx** %3, align 8
  %16 = load i32, i32* @OP_DEFAULT_TTL_GET, align 4
  %17 = call i32 @get_state_u8(%struct.bt_mesh_msg_ctx* %15, i32 %16)
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %14, %11
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @get_state_u8(%struct.bt_mesh_msg_ctx*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
